k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-template-svc
  namespace: 
  labels:
    app: 
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: 
  type: ClusterIP
