k8s/base/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-api-template
